--- a/arch/arm64/boot/dts/crossfield/socfpga_stratix10_100ghip.dtsi
+++ b/arch/arm64/boot/dts/crossfield/socfpga_stratix10_100ghip.dtsi
@@ -526,6 +526,52 @@
 			status = "disabled";
 		};
 
+		bridge0: bridge@f9000000 {
+			compatible = "simple-bus";
+			#address-cells = <1>;
+			#size-cells = <1>;
+			resets = <&rst LWHPS2FPGA_RESET>;
+			clocks = <&clkmgr STRATIX10_L4_MAIN_CLK>;
+			ranges = <0x00000000 0xf9000000 0x1000000>;
+			reg = <0xf9000000 0x1000000>;
+			reg-names = "axi_h2f_lw";
+
+			ethhip_0_s10: ethernet@00000000 {
+				compatible = "altr,s10-100ghip-msgdma-1.0";
+				reg = <0x00000260 0x000000e0>,
+					<0x00000c00 0x00000400>,
+					<0x00001000 0x00000400>,
+					<0x00001400 0x00000400>,
+					<0x00001800 0x00000800>,
+					<0x00002600 0x00000400>,
+					<0x00003000 0x00000400>,
+					<0x00048020 0x00000020>,
+					<0x00048040 0x00000010>,
+					<0x00048068 0x00000008>,
+					<0x00048000 0x00000020>,
+					<0x00048050 0x00000010>,
+					<0x00048060 0x00000008>;
+				reg-names = "anlt_csr", "phy_csr", "txmac_csr",
+						"rxmac_csr", "flow_control", "txstat", "rxstat",
+						"rx_csr", "rx_desc", "rx_resp", "tx_csr", "tx_desc",
+						"sysid";
+				interrupt-parent = <&intc>;
+				interrupts = <0 17 4>, <0 49 4>;
+				interrupt-names = "rx_irq", "tx_irq";
+				resets = <&rst LWHPS2FPGA_RESET>;
+				clocks = <&clkmgr STRATIX10_L4_MAIN_CLK>;
+				rx-fifo-depth = <8192>;
+				tx-fifo-depth = <8192>;
+				address-bits = <48>;
+				max-frame-size = <1518>;
+				local-mac-address = [00 00 00 00 00 00];
+				altr,has-supplementary-unicast;
+				altr,enable-sup-addr = <1>;
+				altr,has-hash-multicast-filter;
+				altr,enable-hash = <1>;
+                        };
+                };
+
 		firmware {
 			svc {
 				compatible = "intel,stratix10-svc";
@@ -537,38 +583,5 @@
 				};
 			};
 		};
-		
-		ethhip_0_s10: ethernet@f9000000 {
-			compatible = "altr,s10-100ghip-msgdma-1.0";
-			reg = <0xf9000260 0x000000e0>,
-				<0xf9000c00 0x00000400>,
-				<0xf9001000 0x00000400>,
-				<0xf9001400 0x00000400>,
-				<0xf9001800 0x00000800>,
-				<0xf9002600 0x00000400>,
-				<0xf9003000 0x00000400>,
-				<0xf9040040 0x00000020>,
-				<0xf9040010 0x00000010>,
-				<0xf9040008 0x00000008>,
-				<0xf9040020 0x00000020>,
-				<0xf9040060 0x00000010>;
-			reg-names = "anlt_csr", "phy_csr", "txmac_csr", 
-				"rxmac_csr", "flow_control", "txstat", "rxstat", 
-				"rx_csr", "rx_desc", "rx_resp", "tx_csr", "tx_desc";
-			interrupt-parent = <&intc>;
-			interrupts = <0 49 4>, <0 17 4>;
-			interrupt-names = "rx_irq", "tx_irq";
-			resets = <&rst LWHPS2FPGA_RESET>;
-			clocks = <&clkmgr STRATIX10_L4_MAIN_CLK>;
-			rx-fifo-depth = <8192>;
-			tx-fifo-depth = <8192>;
-			address-bits = <48>;
-			max-frame-size = <1518>;
-			local-mac-address = [00 00 00 00 00 00];
-			altr,has-supplementary-unicast;
-			altr,enable-sup-addr = <1>;
-			altr,has-hash-multicast-filter;
-			altr,enable-hash = <1>;
-        	};
 	};
 };
