--- a/arch/arm64/boot/dts/crossfield/socfpga_stratix10_100ghip.dtsi
+++ b/arch/arm64/boot/dts/crossfield/socfpga_stratix10_100ghip.dtsi
@@ -538,21 +538,19 @@
 
 			ethhip_0_s10: ethernet@00000000 {
 				compatible = "altr,s10-100ghip-msgdma-1.0";
-				reg = <0x00000260 0x000000e0>,
-					<0x00000c00 0x00000400>,
-					<0x00001000 0x00000400>,
-					<0x00001400 0x00000400>,
-					<0x00001800 0x00000800>,
-					<0x00002600 0x00000400>,
-					<0x00003000 0x00000400>,
+				reg = <0x00000000 0x00040000>,
+					<0x00046000 0x00002000>,
+					<0x00044000 0x00002000>,
+					<0x00042000 0x00002000>,
+					<0x00040000 0x00002000>,
 					<0x00048020 0x00000020>,
 					<0x00048040 0x00000010>,
 					<0x00048068 0x00000008>,
 					<0x00048000 0x00000020>,
 					<0x00048050 0x00000010>,
 					<0x00048060 0x00000008>;
-				reg-names = "anlt_csr", "phy_csr", "txmac_csr",
-						"rxmac_csr", "flow_control", "txstat", "rxstat",
+				reg-names = "eth_reconfig",
+						"xcvr_reconfig0", "xcvr_reconfig1", "xcvr_reconfig2", "xcvr_reconfig3",
 						"rx_csr", "rx_desc", "rx_resp", "tx_csr", "tx_desc",
 						"sysid";
 				interrupt-parent = <&intc>;
